fixes contact form button

--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
               >Умови договору</a
             ></label
           >
-          <button class="btn" type="submit">Відправити</button>
+          <button class="btn contact-form__btn" type="submit">Відправити</button>
         </form>
       </div>
     </div>
